--- a/templates/index1.html
+++ b/templates/index1.html
@@ -20,7 +20,7 @@
 <body style="background: -webkit-linear-gradient(right, red , blue);">
     <header><h1 style="text-align: center;color: white;">Welcome! Signup or Login to get started</h1></header>
     <div style="padding-left: 650px;padding-top: 250px;">
-        <button class="button">Login</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <button class="button"><a href="{{ url_for('form3')}}" style="text-decoration: none; color: rgb(255, 255, 255);"> Login </a></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <button class="button"><a href="{{ url_for('form1')}}" style="text-decoration: none; color: rgb(255, 255, 255);"> Signup </a></button>
     </div>
     
