--- a/templates/layout1.html
+++ b/templates/layout1.html
@@ -60,6 +60,14 @@ form.example::after {
   clear: both;
   display: table;
 }
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 15px;
+}
         </style>
 
     </head>
