--- a/templates/details.html
+++ b/templates/details.html
@@ -68,13 +68,7 @@
                     <br>
                     
                     <!-- <input type="text" placeholder="Enter Username" name="user" class="form-control"required> -->
-
-                    <br>
-                    
                     <h3>Please give your rating:</h3>
-                    
-                    <br>
-
                     <div class="rate">
                         <input type="radio" id="star5" name="stars" value="5 stars" />
                         <label for="star5" title="text">5 stars</label>
@@ -86,14 +80,11 @@
                         <label for="star2" title="text">2 stars</label>
                         <input type="radio" id="star1" name="stars" value="1 star" />
                         <label for="star1" title="text">1 star</label>
-                      </div><br>
+                      </div>
+                      <br>
+                      <br>
 
-                    <!-- <h3> Do you like to add this book to your BookShelf</h3>
-                    <label for="fivestar">Yes</label>
-                    <input type="radio" id="fivestar" name="shelf" value="Yes" ><br>
-                    <label for="fivestar">No</label>
-                    <input type="radio" id="fivestar" name="shelf" value="No" ><br> -->
-                    <!-- <button><a href="#">Add to shelf</a></button> -->
+                    
                     
                     <h3>Please give your review:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h3>
                     <input type="text" name="review" placeholder="Enter your review" class="form-control"required>
