--- a/templates/layout1.html
+++ b/templates/layout1.html
@@ -64,6 +64,8 @@ form.example::after {
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
+  width:50%
+  
 }
 th, td {
   padding: 15px;
