--- a/templates/rating.html
+++ b/templates/rating.html
@@ -11,7 +11,33 @@
     font-weight: bold;
     line-height: 80px;
 }
+.btnSubmit
+{
+    border:none;
+    border-radius:1.5rem;
+    padding: 1%;
+    
+    width: 20%;
+    
+    background: #0062cc;
+    color: #fff;
+    align-items: center;
+    
+}
+.button {
+          background-color: #000000;
+          border: none;
+          color: white;
+          padding: 15px 32px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 16px;
+          margin: 4px 2px;
+          cursor: pointer;
+        }
     </style>
+
     
 </head>
 <body>
@@ -19,8 +45,12 @@
     <div class="note">
         <h1>Book Details</h1>
     </div>
-    <h1 style="text-align: center">Book added successfully!</h1>
-    <button><a href="hello.html">Home page</a></button>
+    <div style="text-align: center">
+        <button class="button"><a href="/home" style="text-decoration: none; color: rgb(255, 255, 255);">Home page</a></button>
+    </div>
+    
+    <h1 style="text-align: center">Thanks for your rating and review!</h1>
+    
     
 </body>
 </html>
